@@ -402,6 +402,8 @@ class sfCoreAutoload
     'sfprojectpermissionstask' => 'task/project/sfProjectPermissionsTask.class.php',
     'sfupgradeto13task' => 'task/project/sfUpgradeTo13Task.class.php',
     'sfassetsupgrade' => 'task/project/upgrade1.3/sfAssetsUpgrade.class.php',
+    'sfformsupgrade' => 'task/project/upgrade1.3/sfFormsUpgrade.class.php',
+    'sftasksupgrade' => 'task/project/upgrade1.3/sfTasksUpgrade.class.php',
     'sfupgrade' => 'task/project/upgrade1.3/sfUpgrade.class.php',
     'sfbasetask' => 'task/sfBaseTask.class.php',
     'sfcommandapplicationtask' => 'task/sfCommandApplicationTask.class.php',
@@ -493,6 +495,7 @@ class sfCoreAutoload
     'sfwidgetforminputfileeditable' => 'widget/sfWidgetFormInputFileEditable.class.php',
     'sfwidgetforminputhidden' => 'widget/sfWidgetFormInputHidden.class.php',
     'sfwidgetforminputpassword' => 'widget/sfWidgetFormInputPassword.class.php',
+    'sfwidgetforminputtext' => 'widget/sfWidgetFormInputText.class.php',
     'sfwidgetformschema' => 'widget/sfWidgetFormSchema.class.php',
     'sfwidgetformschemadecorator' => 'widget/sfWidgetFormSchemaDecorator.class.php',
     'sfwidgetformschemaforeach' => 'widget/sfWidgetFormSchemaForEach.class.php',
