@@ -12,7 +12,7 @@ require_once(dirname(__FILE__).'/../../bootstrap/unit.php');
 
 $t = new lime_test(4);
 
-$w1 = new sfWidgetFormInput();
+$w1 = new sfWidgetFormInputText();
 $w = new sfWidgetFormSchema(array('w1' => $w1));
 
 // __construct()
